--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,12 @@
   text-align: center;
   padding: 0 0.2rem;
 }
-* body main .card ul {
+* body main .card ol {
   display: flex;
   justify-content: space-between;
   margin: 1.5rem 0 1.5rem 0;
 }
-* body main .card ul ol {
+* body main .card ol li {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -87,11 +87,11 @@
   background-color: hsl(210deg, 19%, 21%);
   border-radius: 50%;
 }
-* body main .card ul ol.selected {
+* body main .card ol li.selected {
   background-color: hsl(216deg, 12%, 54%);
   color: hsl(0deg, 0%, 100%);
 }
-* body main .card ul ol:hover {
+* body main .card ol li:hover {
   cursor: pointer;
   background-color: hsl(25deg, 97%, 53%);
   color: hsl(0deg, 0%, 100%);
