--- a/css/style.scss
+++ b/css/style.scss
@@ -81,12 +81,12 @@ $very-dark-blue: hsl(216, 12%, 8%);
               padding: 0 0.2rem;
             }
 
-            ul {
+            ol {
               display: flex;
               justify-content: space-between;
               margin: 1.5rem 0 1.5rem 0;
 
-              ol {
+              li {
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -146,8 +146,6 @@ $very-dark-blue: hsl(216, 12%, 8%);
 
           p, p span {
             font-size: 0.8rem;
-
-            
           }
         }
       }
