--- a/css/style.scss
+++ b/css/style.scss
@@ -51,7 +51,7 @@ $very-dark-blue: hsl(216, 12%, 8%);
             h1 {
               font-size: 1.5rem;
               color: $white;
-              margin: 1rem 0;
+              margin: 3rem 0 .5rem 0;
             }
 
             h2 {
@@ -84,7 +84,7 @@ $very-dark-blue: hsl(216, 12%, 8%);
             ol {
               display: flex;
               justify-content: space-between;
-              margin: 1.5rem 0 1.5rem 0;
+              margin: 1rem 0 1.5rem 0;
 
               li {
                 display: flex;
